// If npx -p @dbml/cli dbml2sql dbml/main.dbml --postgres -o migrations/new_migration/up.sql fails use the playground
// https://dbml.dbdiagram.io/playground/

Enum "account_type" {
  "asset"
  "liability"
  "equity"
  "revenue"
  "expense"
}

Enum "transfer_status" {
  "pending"
  "cancelled"
  "completed"
}

Table "accounts" {
  "id" SERIAL [pk, increment]
  "account_type" account_type [not null]
  "name" varchar [not null]
  "active" bool [not null, default: false]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp
}

Table "ledger_lines" {
  id SERIAL [pk, increment]
  journal_entry_id integer [not null, ref: > journal_entries.id]
  account integer [not null, ref: - accounts.id]
  debit bigint [not null, default: 0]
  credit bigint [not null, default: 0]
  "created_at" timestamp [not null, default: `now()`]

  checks {
    `debit >= 0 AND credit >= 0 AND (debit > 0) != (credit > 0)` [name: 'ledger_lines_valid_leg']
  }
}

Table "journal_entries" {
  "id" SERIAL [pk, increment]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp
}

Table balances {
  account_id integer [pk, ref: - accounts.id]
  balance bigint [not null, default: 0]
  "updated_at" timestamp [not null, default: `now()`]
  // last journal entry which updated the balance — only needed if balance updates become async.
  // last_journal_entry_id integer [ref: - journal_entries.id]
}

// Temporary table to hold blocked amounts on an account.
// Record should be removed when the amount is unblocked.
Table account_blocks {
  id SERIAL [pk, increment]
  account_id integer [not null, ref: - accounts.id]
  amount bigint [not null]
  created_at timestamp [not null, default: `now()`]
  // UNIQUE ensures one block per transfer (idempotency).
  // A trigger enforces account_id matches transfer.from_account_id and transfer is pending.
  transfer_id integer [not null, unique, ref: - transfer_internal.id]
}

Table transfer_internal {
  id SERIAL [pk, increment]
  // journal entry recorded when transfer is successfully completed
  journal_entry_id integer [ref: - journal_entries.id]
  from_account_id integer [not null, ref: - accounts.id]
  to_account_id integer [not null, ref: - accounts.id]
  amount bigint [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp
  status transfer_status [not null, default: 'pending']
}
